[gd_scene load_steps=8 format=3 uid="uid://cudf47lje7goo"]

[ext_resource type="Script" path="res://enemy_sound_player.gd" id="1_m2y1r"]
[ext_resource type="AudioStream" uid="uid://cbw0tqjprrygc" path="res://audio/DL_Monster_MainNoise.wav" id="2_clncx"]
[ext_resource type="AudioStream" uid="uid://dfx2lhfuivp46" path="res://audio/DL_Monster_Chase_Ambience.wav" id="2_owi5t"]

[sub_resource type="Animation" id="Animation_8ec6t"]
resource_name = "chase_start"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChaseAudioStreamPlayer2D:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ChaseAudioStreamPlayer2D:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(0.406126, 1),
"update": 0,
"values": [-30.0, 15.0]
}

[sub_resource type="Animation" id="Animation_c0k4n"]
length = 0.001

[sub_resource type="Animation" id="Animation_qua1t"]
resource_name = "chase_stop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChaseAudioStreamPlayer2D:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ChaseAudioStreamPlayer2D:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [15.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_au7li"]
_data = {
"RESET": SubResource("Animation_c0k4n"),
"chase_start": SubResource("Animation_8ec6t"),
"chase_stop": SubResource("Animation_qua1t")
}

[node name="enemy_sound_player" type="Node2D"]
script = ExtResource("1_m2y1r")

[node name="DistanceEnemyPlayers" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="DistanceEnemyPlayers"]
volume_db = 15.0
max_distance = 10000.0
attenuation = 1.10957
bus = &"ENEMY"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="DistanceEnemyPlayers"]
volume_db = 15.0
max_distance = 10000.0
attenuation = 1.10957
bus = &"ENEMY"

[node name="EnemyMainAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_clncx")
volume_db = 15.0
max_distance = 1100.0
attenuation = 1.23114
bus = &"ENEMY"

[node name="ChaseAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_owi5t")
volume_db = -80.0
max_distance = 10000.0
attenuation = 1.10957
bus = &"ENEMY"

[node name="AnimationPlayerChase" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_au7li")
}

[connection signal="finished" from="EnemyMainAudioStreamPlayer2D" to="." method="_on_enemy_main_audio_stream_player_2d_finished"]
